fix: small alignment issue on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,9 +39,13 @@ body {
   height: 100%;
 }
 
-
 @media only screen and (max-width: 600px) {
   .partners .partner {
     margin-top: 1rem;
+  }
+
+  .partners .partner a {
+    display: flex;
+    justify-content: start;
   }
 }
